--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -33,9 +33,9 @@
 .div_f0Au33C {
   width: 100%;
   height: 100%;
-  padding: 15px 0;
 
   display: flex;
+  padding: 15px;
 
   & svg {
     fill: var(--color-letter);
@@ -143,13 +143,6 @@
 
   border-radius: 8px;
   overflow: hidden;
-
-  & hr {
-    background: rgb(181 178 178 / 0.3);
-    width: 100%;
-    height: 1.25px;
-    border: none;
-  }
 }
 
 .a_TE0KsGr {
@@ -160,6 +153,7 @@
 
   padding-left: 20px;
 
+  background: var(--color-item);
   color: var(--color-letter);
   text-decoration: none;
 
@@ -176,6 +170,7 @@
 
   height: 60px;
 
+  background: var(--color-item);
   color: var(--color-letter);
 
   text-decoration: none;
@@ -204,10 +199,9 @@
 
 /* PRODUCTOS */
 .div_mF99tCO {
-  padding: 15px 0;
-  flex: 1;
+  padding: 15px;
 
-  display: flex;
+  flex: 1;
 }
 
 .div_AGlTc4C {
@@ -220,66 +214,39 @@
 
   border-radius: 8px;
   overflow: hidden;
-
-  & hr {
-    background: rgb(181 178 178 / 0.3);
-    width: 100%;
-    height: 1.25px;
-    border: none;
-  }
 }
 
 .a_OGTLhnw {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-
+  display: flex;
   gap: 15px;
   padding: 15px;
 
   text-decoration: none;
+
+  background: var(--color-item);
   color: var(--color-letter);
 
   & img {
-    width: 60px;
-    height: 60px;
-    border-radius: 8px;
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
     object-fit: cover;
   }
-}
 
-.div_T9u1Tyz {
-  flex: 1;
-  display: flex;
-  align-items: start;
-  gap: 15px;
-
-  overflow: hidden;
+  & svg {
+    width: 20px;
+    height: 20px;
+    margin: auto 0;
+  }
 }
 
 .div_226x4d7 {
   flex: 1;
   display: grid;
-  gap: 10px;
 }
 
 .div_TDXPB0u {
-  margin-bottom: auto;
-}
-
-.div_MB5SEYQ {
-  margin-bottom: auto;
-  display: flex;
-  gap: 10px;
-
-  & span {
-    color: var(--color-letter);
-    font-size: 13px;
-
-    padding: 5px 15px;
-    border-radius: 15px;
-    border: 1.25px solid var(--color-letter);
-  }
+  display: grid;
 }
 
 /* ASISTENCIA */
@@ -453,4 +420,4 @@
   display: flex;
   background: var(--color-background);
 }
-/* div_mF99tCO */
+/* div_28hUF27 */
