--- a/public/css/components.css
+++ b/public/css/components.css
@@ -156,6 +156,7 @@
 .div_Iaf1Qwz {
   display: flex;
   align-items: center;
+  padding-top: 15px;
   gap: 15px;
 }
 
@@ -831,8 +832,6 @@
 
   padding: 15px;
   gap: 15px;
-
-  animation: translateUp 0.3s ease;
 }
 
 .div_82XMPG6 {
@@ -905,5 +904,120 @@
     border-radius: 8px;
   }
 }
+
+/* ASISTENCIA MARCAR */
+.div_n76Pr7U {
+  position: fixed;
+  inset: 0;
+
+  display: flex;
+  background: rgb(0, 0, 0, 0.3);
+  backdrop-filter: blur(2.5px);
+
+  color: var(--color-letter);
+
+  & svg {
+    fill: var(--color-letter);
+  }
+}
+
+.div_GfaM0Ws {
+  position: inherit;
+  inset: inherit;
+}
+
+.div_iRbMV3T {
+  position: relative;
+
+  display: grid;
+  grid-template-rows: auto 1fr;
+
+  margin: auto;
+  margin-bottom: initial;
+
+  width: 100%;
+  height: calc(100% - 60px);
+
+  background: var(--color-item);
+
+  border-radius: 8px 8px 0 0;
+  animation: translateUp 0.3s ease;
+}
+
+.div_OdvFgf7 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding-left: 20px;
+}
+
+.div_l46oEtr{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  overflow: hidden;
+}
+
+.div_7uRSuQW {
+  flex: 1;
+  display: flex;
+}
+
+.div_7GjGF16 {
+  margin: auto;
+  margin-top: initial;
+
+  width: 100%;
+  display: grid;
+  padding: 0 20px;
+}
+
+.div_7t97RMm {
+  height: 60px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border-bottom: 1.25px solid rgb(181 178 178 / 0.3);
+
+  &:last-child {
+    border-bottom: none;
+  }
+}
+
+.div_Hqv639S {
+  display: flex;
+  padding: 15px;
+  gap: 15px;
+
+  & button {
+    flex: 1;
+    height: 60px;
+    border-radius: 60px;
+
+    border: 1.25px solid var(--color-letter);
+
+    color: var(--color-letter);
+
+    &.dark {
+      background: var(--color-letter);
+      color: var(--color-item);
+    }
+  }
+}
+
+@media (min-width: 600px) {
+  .div_iRbMV3T {
+    width: min(100%, 750px);
+    margin: auto;
+
+    border-radius: 8px;
+    animation: smallToBig 0.3s ease;
+  }
+}
+
 
 /* div_4RCIRxr */
